// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MonthCalendar renders array of objects correctly 1`] = `
<div
  class="c-wrapper"
>
  <div
    class="calendar"
  >
    <div
      class="calendar__title"
    >
      一月
    </div>
     
    <div
      class="calendar__body"
    >
      <div
        class="calendar__day day__weektitle"
        style="font-size: 16px;"
      >
        一
      </div>
      <div
        class="calendar__day day__weektitle"
        style="font-size: 16px;"
      >
        二
      </div>
      <div
        class="calendar__day day__weektitle"
        style="font-size: 16px;"
      >
        三
      </div>
      <div
        class="calendar__day day__weektitle"
        style="font-size: 16px;"
      >
        四
      </div>
      <div
        class="calendar__day day__weektitle"
        style="font-size: 16px;"
      >
        五
      </div>
      <div
        class="calendar__day day__weektitle"
        style="font-size: 16px;"
      >
        六
      </div>
      <div
        class="calendar__day day__weektitle"
        style="font-size: 16px;"
      >
        日
      </div>
       
      <div
        class="calendar__day"
      >
        <div
          class="day calendar__day--otherMonth"
        >
          
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day"
        >
          1
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day"
        >
          2
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day"
        >
          3
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day"
        >
          4
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day"
        >
          5
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day"
        >
          6
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day"
        >
          7
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day"
        >
          8
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day"
        >
          9
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day"
        >
          10
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day"
        >
          11
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day"
        >
          12
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day calendar--active "
        >
          13
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day calendar--active info"
        >
          14
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day calendar--active warning"
        >
          15
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day"
        >
          16
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day"
        >
          17
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day"
        >
          18
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day"
        >
          19
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day"
        >
          20
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day"
        >
          21
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day"
        >
          22
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day"
        >
          23
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day"
        >
          24
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day"
        >
          25
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day"
        >
          26
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day"
        >
          27
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day"
        >
          28
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day"
        >
          29
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day"
        >
          30
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day"
        >
          31
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day calendar__day--otherMonth"
        >
          1
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day calendar__day--otherMonth"
        >
          2
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day calendar__day--otherMonth"
        >
          3
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MonthCalendar renders array of strings correctly 1`] = `
<div
  class="c-wrapper"
>
  <div
    class="calendar"
  >
    <div
      class="calendar__title"
    >
      一月
    </div>
     
    <div
      class="calendar__body"
    >
      <div
        class="calendar__day day__weektitle"
        style="font-size: 16px;"
      >
        一
      </div>
      <div
        class="calendar__day day__weektitle"
        style="font-size: 16px;"
      >
        二
      </div>
      <div
        class="calendar__day day__weektitle"
        style="font-size: 16px;"
      >
        三
      </div>
      <div
        class="calendar__day day__weektitle"
        style="font-size: 16px;"
      >
        四
      </div>
      <div
        class="calendar__day day__weektitle"
        style="font-size: 16px;"
      >
        五
      </div>
      <div
        class="calendar__day day__weektitle"
        style="font-size: 16px;"
      >
        六
      </div>
      <div
        class="calendar__day day__weektitle"
        style="font-size: 16px;"
      >
        日
      </div>
       
      <div
        class="calendar__day"
      >
        <div
          class="day calendar__day--otherMonth"
        >
          
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day calendar--active "
        >
          1
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day"
        >
          2
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day"
        >
          3
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day"
        >
          4
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day"
        >
          5
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day"
        >
          6
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day"
        >
          7
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day"
        >
          8
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day"
        >
          9
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day"
        >
          10
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day"
        >
          11
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day"
        >
          12
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day"
        >
          13
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day"
        >
          14
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day"
        >
          15
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day"
        >
          16
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day"
        >
          17
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day"
        >
          18
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day"
        >
          19
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day calendar--active "
        >
          20
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day"
        >
          21
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day"
        >
          22
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day"
        >
          23
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day"
        >
          24
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day"
        >
          25
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day"
        >
          26
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day"
        >
          27
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day"
        >
          28
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day"
        >
          29
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day"
        >
          30
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day"
        >
          31
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day calendar__day--otherMonth"
        >
          1
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day calendar__day--otherMonth"
        >
          2
        </div>
      </div>
      <div
        class="calendar__day"
      >
        <div
          class="day calendar__day--otherMonth"
        >
          3
        </div>
      </div>
    </div>
  </div>
</div>
`;
